# pytomator

./: .gitignore  AGENTS.md  README.md  app.spec  pyproject.toml  pytomator.spec
assets/: app.xcf  app_icon.xcf  version_info.txt
pytomator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
resources/: app.xcf
src/hodes_pytomator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pytomator/: __init__.py  app.py  build_info.py
src/pytomator/config/: __init__.py  config_manager.py  default_config.py  settings.py
src/pytomator/core/: __init__.py  api_registry.py  decorators.py  events.py  global_interruption_controller.py  hotkey_backends.py  hotkey_manager.py  script_interrupted.py  script_runner.py
src/pytomator/core/automator/: api.py
src/pytomator/core/recording/: __init__.py  command_catalog.py  mouse_path.py  physical_keyboard.py  player.py  recorder.py  script_generator.py
src/pytomator/core/vision/: __init__.py  capture_tool.py  models.py  search_context.py  template_matcher.py  template_matcher_registry.py  template_matcher_service.py
src/pytomator/core/windows/: __init__.py  factory.py  window_controller.py  windows_window_controller.py
src/pytomator/editor/: code_editor.py
src/pytomator/project/: __init__.py  manager.py  models.py  storage.py
src/pytomator/resources/: resources.qrc
src/pytomator/ui/: __init__.py  about_frame.py  api_doc_generator.py  editor_frame.py  main_window.py  project_frame.py  recording_timeline.py  recordings_frame.py  settings_frame.py  templates_frame.py
src/pytomator/ui/capture/: __init__.py  capture_manager.py  capture_overlay.py
src/pytomator/ui/widgets/: code_editor.py
tests/: test_capture_cancellation.py  test_code_editor_theme.py  test_hotkey_manager.py  test_mouse_backend.py  test_project_reopen.py  test_recordings.py  test_vision_coordinates.py  test_window_autofocus.py
tools/: build.py  build_resources.py  generate_version_info.py  version_info.txt
