[tool.poetry]
name = "pytomator"
version = "0.1.0"
description = "Python scripted automation tool"
authors = ["Henrique Otavio <https://github.com/hodes>"]
readme = "README.md"
packages = [{ include = "pytomator", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"

# UI + Editor
PyQt6 = "^6.7"
PyQt6-QScintilla = "^2.14"

# Qt tooling (build only)
PySide6 = "^6.7"

# Automation
pyautogui = "^0.9"
pydirectinput = "^1.0"
keyboard = "^0.13"
mss = "^10.0"
pillow = "^12.0"

[tool.poetry.scripts]
pytomator = "pytomator.app:main"
build-resources = "tools.build_resources:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
