[project]
name = "pytomator"
version = "0.2.1"
description = "Python scripted automation tool"
authors = [{ name = "Henrique Otavio" }]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pyqt6>=6.10.2,<7",
    "pyqt6-qscintilla>=2.14.1,<3",
    "pyautogui>=0.9,<1",
    "pydirectinput>=1.0,<2",
    "keyboard>=0.13,<1",
    "pynput>=1.7,<2",
    "mss>=10.0,<11",
    "pillow>=12.0,<13",
    "qtawesome>=1.4.0,<2",
    "pydantic>=2.0",
    "opencv-python>=4.10,<5",
    "pywin32>=308",
]

[project.scripts]
pytomator = "pytomator.app:main"
build-resources = "tools.build_resources:main"
gen-version = "tools.generate_version_info:main"
build = "tools.build:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["pytomator*", "tools*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0,<7.0.0",
    "pyside6>=6.10.1,<7.0.0",
]
